Add freshness checks for HTTP signatures